# FileFlow-Offline-AI-Usable

./: .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-ocr.txt  requirements.txt
.cursor/rules/: fileflow-offline-ai.mdc
.github/: copilot-instructions.md
docs/: RELEASE_CHECKLIST.md  RELEASE_v0.2.0.md
packaging/: offline-converter-core.spec  offline-converter.spec  prepare-ocr-addon.ps1
packaging/addons/: README.md
packaging/inno/: FileFlowOffline-Core.iss  FileFlowOffline-LibreOffice-Addon.iss  FileFlowOffline-OCR-Addon.iss
skills/fileflow-offline-ai/: SKILL.md
skills/fileflow-offline-ai/agents/: openai.yaml
skills/fileflow-offline-ai/scripts/: resolve_fileflow.py
src/offline_converter/: __init__.py  __main__.py  cli.py  converters.py  dependencies.py  errors.py  gui.py  logging_utils.py  runner.py  tasks.py
tests/: test_cli.py  test_converters.py  test_dependencies.py  test_gui_helpers.py  test_packaging_assets.py  test_real_pdf_samples.py  test_visual_pdf_word.py
tests/samples/: README.md
